# rusty-samplers

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  STATUS.md  UIDESIGN.md  create_test_akp.py  index.html  init.rs  package-lock.json  package.json  vite.config.ts
benches/: conversion_benchmarks.rs
docs/: akp-format-reference.md  user-guide.md
docs/superpowers/plans/: 2026-03-12-spec-aligned-parser-rewrite.md
docs/superpowers/specs/: 2026-03-12-spec-aligned-parser-rewrite-design.md
examples/: diff_sfz.rs  test_runner.rs  validate_samples.rs
gui/: Cargo.toml  tauri.conf.json
gui/icons/: icon.icns
gui/src/: lib.rs  main.rs
src/: App.css  App.tsx  conversion.rs  dspreset.rs  error.rs  lib.rs  main.rs  parser.rs  samples.rs  sfz.rs  test.rs  types.rs  validate.rs  validation.rs
src/components/: ControlPanel.tsx  FilePanel.tsx  QualityPanel.tsx
src/formats/: common.rs  mod.rs
src/formats/akp/: binrw_parser.rs  legacy.rs  mod.rs  types.rs
src/formats/sfz/: generator.rs  mod.rs  types.rs
src/plugins/: akp.rs  mod.rs  pgm.rs  registry.rs  traits.rs
src/types/: index.ts
test_data/: README.md
tests/: integration_tests.rs  multi_format_tests.rs
