[package]
name = "rusty-samplers"
version = "0.9.0"
edition = "2024"
description = "Professional AKP to SFZ converter with modular architecture"
authors = ["Rusty Samplers Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/rusty-samplers"
readme = "README.md"

[dependencies]
byteorder = "1.4"
thiserror = "1.0"
binrw = "0.14"
log = "0.4"
env_logger = "0.11"

[features]
default = ["legacy-parser"]
legacy-parser = []
binrw-parser = []