[package]
name = "rusty-samplers-gui"
version = "0.9.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Reference to our main library
rusty-samplers = { path = "../", version = "0.9.0" }
